k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver
  labels:
    app: goserver
spec:
  selector:
    matchLabels:
      app: goserver
  replicas: 1
  template:
    metadata:
      labels:
        app: "goserver"
    spec:
      containers:
        - name: goserver
          image: "feliperomao07/hello-go:v8.3"
          resources:
            # Minimo requerido
            requests:
              cpu: 100m
              memory: 20Mi

            # Máximo que o pode usar
            limits:
              cpu: 500m
              memory: 25Mi

          startupProbe:
            httpGet:
              path: /healthz
              port: 8000 # Porta do container
            periodSeconds: 3
            failureThreshold: 30

          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000 # Porta do container
            periodSeconds: 3
            failureThreshold: 1
            # initialDelaySeconds: 10 # Aguardar 10 segundo para começar a verificar
          
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000 # Porta do container
            periodSeconds: 5
            failureThreshold: 3
            timeoutSeconds: 1
            successThreshold: 1
            # initialDelaySeconds: 15 # Aguardar 10 segundo para começar a verificar

          volumeMounts:
            - mountPath: "/go/myfamily"
              name: config
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: configmap-family
            items:
              - key: members
                path: "family.txt"
