k8s/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "goserver"
  labels:
    app: "goserver"

spec:
  containers:
    - name: goserver
      image: "feliperomao07/hello-go"
